# ScalaCollectionsPresentation

./: .gitignore
benchmarks/c++17/: CMakeLists.txt  README  README.md  benchmark.dockerfile
benchmarks/c++17/src/: Benchmark.h  BenchmarkResult.h  RunningStat.h  VectorView.h  main.cpp
benchmarks/scala-2.11/: README.md
benchmarks/scala-2.11/core/: build.sbt
benchmarks/scala-2.11/core/src/main/scala/core/: Benchmark.scala  Main.scala  Stats.scala
benchmarks/scala-2.11/dockerfiles/: jdk-8-hotspot.dockerfile  jdk-8-openj9.dockerfile
benchmarks/scala-2.11/project/: common.scala
examples/: build.sbt
examples/core/: build.sbt
examples/core/src/main/scala/core/: Example1.scala  Example3.scala  Example4.scala  Example5.scala  Example6.scala  Example7.scala  Example8.scala  View1.scala  View2.scala  example2.scala
examples/dockerfiles/: jdk-8-hotspot.dockerfile
examples/project/: common.scala
presentation/: beamer-sample.aux  beamer-sample.nav  beamer-sample.out  beamer-sample.tex  beamer-sample.toc  beamer-sample.vrb
